--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "msw": "^0.49.2",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -25,5 +26,8 @@
     "postcss": "^8.4.21",
     "prettier": "^2.8.2",
     "tailwindcss": "^3.2.4"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
