--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/font": "13.1.1",
     "@tanstack/react-query": "^4.22.0",
+    "@types/lodash": "^4.14.191",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
@@ -18,6 +19,7 @@
     "clsx": "^1.2.1",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "lodash": "^4.17.21",
     "msw": "^0.49.2",
     "next": "13.1.1",
     "react": "18.2.0",
