--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "18.0.10",
     "@types/uuid": "^9.0.0",
     "clsx": "^1.2.1",
+    "dayjs": "^1.11.7",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "lodash": "^4.17.21",
